--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <img alt="" class="image-quote" src="images/image-icons/icon-quote.png">
                 <div class="client-title">
                   <span class="client-name">Alessandra Pretti</span> 
-                  <span class="client-company">/ Estúdio Elevare</span>
+                  <span class="client-company">/ Studio Elevare</span>
                 </div>
                 <p class="client-description">Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie luctus.Lorem ipsum Dolor tusima olatiup.</p>
               </div>
