--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W44WM8T4');</script>
+})(window,document,'script','dataLayƒer','GTM-W44WM8T4');</script>
 <!-- End Google Tag Manager -->
   
   <meta charset="utf-8">
@@ -686,7 +686,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
             <div class="project-hover">
               <div class="project-hover-content">
-                <h3 class="project-title">Skan Hous 1.0<br>Aço e Vidro<br>Cercado por Natureza</h3>
+                <h3 class="project-title">Skan Hous 1.0<br>Projeto Itu<br>Cercado por Natureza</h3>
                 <p class="project-description">A Skan Hous Itu é o nosso modelo 1.0. Este projeto possui 350 m2 de alto padrão localizada em Itu no interior de São Paulo, foi constuida em um lote de 20.000 m2 cercada por uma natureza abundante. </p>
               </div>
             </div>
