--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p class="project-description">A poucas horas de São Paulo, o Condomínio Lago Azul lança sua segunda fase. Com a amplicação do seu exclusivo campo de golfe e com novas vistas. </p>
               </div>
             </div>
-            <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
+            <span class="link-arrow">Em Breve <i class="icon ion-ios-arrow-right"></i></span>
           </a>
         </div>
 
