--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <span class="client-name">Alessandra Pretti</span> 
                   <span class="client-company">/ Studio Elevare</span>
                 </div>
-                <p class="client-description">Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie luctus.Lorem ipsum Dolor tusima olatiup.</p>
+                <p class="client-description">Participar do desenvolvimento do projeto de casas modulares foi um marco na minha trajetória. Idealizamos um sistema construtivo adaptável a diferentes tipos de terrenos, promovendo integração com o meio ambiente e respeitando as características naturais de cada local. O foco em uma construção ecologicamente correta, com processos limpos e eficientes, garantiu um resultado que combina funcionalidade, beleza e sustentabilidade, atendendo às demandas de quem busca inovação e qualidade.</p>
               </div>
             </div>
             <div class="client-carousel-item">
