--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <span class="client-name">Andre Pinheiro </span> 
                   <span class="client-company">/ Zanollin Engenharia</span>
                 </div>
-                <p class="client-description">Sed elit quam, iaculis sed semper sit amet udin vitae nibh. at magna akal semperFusce commodo molestie luctus.Lorem ipsum Dolor tusima olatiup.</p>
+                <p class="client-description">Desenvolver o projeto de casas modulares foi um desafio que trouxe enorme satisfação para a equipe da ZANOLLIN. Adaptar a experiência acumulada ao longo dos anos na área industrial para um contexto mais sutil e integrado com todas as disciplinas foi uma jornada enriquecedora. O resultado final foi uma estrutura que harmoniza perfeitamente com a arquitetura: apesar da robustez típica de estruturas industriais, alcançamos linhas suaves e elegantes, criando uma integração arquitetônica marcante e funcional.</p>
               </div>
             </div>
             </div>
