--- a/index.html
+++ b/index.html
@@ -1481,7 +1481,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       <p class="contact-address text-muted"><strong>Al. Grajau, 219, Barueri - cep 06.454-050.</strong></p>
 <p class="contact-row">
   <strong class="text-dark">Bio:</strong> 
-  <a href="http://www.bio.skanhous.com.br" style="color:black; text-decoration:none;" onmouseover="this.style.color='#ffc304';" onmouseout="this.style.color='black';">
+  <a href="https://www.bio.skanhous.com.br" style="color:black; text-decoration:none;" onmouseover="this.style.color='#ffc304';" onmouseout="this.style.color='black';">
     www.bio.skanhous.com.br
   </a>
 </p>
