--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p class="contact-row">
   <strong class="text-dark">Bio:</strong> 
   <a href="https://bio.skanhous.com.br" style="color:black; text-decoration:none;" onmouseover="this.style.color='#ffc304';" onmouseout="this.style.color='black';">
-    www.bio.skanhous.com.br
+    bio.skanhous.com.br
   </a>
 </p>
 
