--- a/index.html
+++ b/index.html
@@ -661,71 +661,74 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </section>
 
- <!-- Section Projects -->
-<section id="projects" class="section-projects section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-5">
-        <h2 class="section-title">Projetos</h2>
-      </div>
-      <div class="col-lg-7">
-        <div class="filter-content">
-          <ul class="filter-carousel filter pull-lg-right js-filter-carousel">
-            <li class="active"><a href="#" data-filter="*">Todos</a></li>
-            <li><a href="#" data-filter=".building">Building</a></li>
-            <li><a href="#" data-filter=".interior-exterior">Interior & Exterior</a></li>
-          </ul>
+     <!-- Section Projects -->
+      <section id="projects" class="section-projects section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5">
+               <h2 class="section-title">Projetos</h2>
+            </div>        
+            <div class="col-lg-7">
+              <div class="filter-content">
+                <ul class="filter-carousel filter pull-lg-right js-filter-carousel">
+                  <li class="active"><a href="#" class="all" data-filter="*">Todos</a></li>
+                  <li><a href="#" data-filter=".building">Building </a></li>
+                  <li><a href="#" data-filter=".interior-exterior">Interior & Exterior </a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="project-carousel owl-carousel">
-    <!-- Project Carousel Items -->
-    <a href="#project1" class="project-item item-shadow popup-with-zoom-anim building">
-      <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
-      <div class="project-hover">
-        <div class="project-hover-content">
-          <h3 class="project-title">Skan Hous 1.0<br>Projeto Itu<br>Cercado por Natureza</h3>
-          <p class="project-description">A Skan Hous Itu é o nosso modelo 1.0. Este projeto possui 350 m² de alto padrão, localizada em Itu, foi construída em um lote de 20.000 m² cercada por natureza abundante.</p>
-        </div>
-      </div>
-      <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
-    </a>
+        <div class="project-carousel owl-carousel">
 
-    <a href="#project2" class="project-item item-shadow popup-with-zoom-anim building">
-      <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
-      <div class="project-hover">
-        <div class="project-hover-content">
-          <h3 class="project-title">Skan Hous <br>Woodframe<br>by F: Poles</h3>
-          <p class="project-description">Criada pelo conceituado escritório F: Poles, este projeto foi desenvolvido para o Lago Azul, todo feito em Madeira Engenheirada.</p>
-        </div>
-      </div>
-      <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
-    </a>
+          <!-- Project Carousel Item 1 -->
+          <a href="#project1" class="project-item item-shadow popup-with-zoom-anim building">
+            <img alt="" class="img-responsive" src="images/projects/1-426x574.jpg">
+            <div class="project-hover">
+              <div class="project-hover-content">
+                <h3 class="project-title">Skan Hous 1.0<br>Projeto Itu<br>Cercado por Natureza</h3>
+                <p class="project-description">A Skan Hous Itu é o nosso modelo 1.0. Este projeto possui 350 m2 de alto padrão localizada em Itu no interior de São Paulo, foi constuida em um lote de 20.000 m2 cercada por uma natureza abundante. </p>
+              </div>
+            </div>
+            <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
+          </a>
+          
+          <!-- Project Carousel Item 2 -->
+          <a href="#project2" class="project-item item-shadow popup-with-zoom-anim building">
+            <img alt="" class="img-responsive" src="images/projects/2-426x574.jpg">
+            <div class="project-hover">
+              <div class="project-hover-content">
+                <h3 class="project-title">Skan Hous <br>Woodframe<br>by F: Poles</h3>
+                <p class="project-description">Criada pelo conceituado escritório F: Poles, este projeto foi desenvovido para o Lago Azul, todo feito em Madeira Engenheirada.</p>
+              </div>
+            </div>
+            <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
+          </a>
+          
+          <!-- Project Carousel Item 3 -->
+          <a href="#project3" class="project-item item-shadow popup-with-zoom-anim building">
+            <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
+            <div class="project-hover">
+              <div class="project-hover-content">
+                <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>Alessandra Pretti</h3>
+                <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou espaços para deixar a família e seus convidados a vontade. </p>
+              </div>
+            </div>
+            <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
+          </a>
 
-    <a href="#project3" class="project-item item-shadow popup-with-zoom-anim building">
-      <img alt="" class="img-responsive" src="images/projects/3-426x574.jpg">
-      <div class="project-hover">
-        <div class="project-hover-content">
-          <h3 class="project-title">Skan Hous 2.0 <br>Aço e Vidro <br>Alessandra Pretti</h3>
-          <p class="project-description">Após o sucesso da versão 1.0, o escritório Elevare da arquiteta Alessandra Pretti desenvolveu a versão 2.0. Os espaços foram otimizados e o Módulo Quartos ganhou novos espaços para a família e convidados.</p>
+          <!-- Project Carousel Item 4 -->
+          <a href="#project4" class="project-item item-shadow popup-with-zoom-anim building">
+            <img alt="" class="img-responsive" src="images/projects/4-426x574.jpg">
+            <div class="project-hover">
+              <div class="project-hover-content">
+                <h3 class="project-title">Lago Azul<br>Condomínio<br>Sorocaba </h3>
+                <p class="project-description">A poucas horas de São Paulo, o Condomínio Lago Azul lança sua segunda fase. Com a amplicação do seu exclusivo campo de golfe e com novas vistas. </p>
+              </div>
+            </div>
+            <span class="link-arrow">Em Breve <i class="icon ion-ios-arrow-right"></i></span>
+          </a>
         </div>
-      </div>
-      <span class="link-arrow">Veja o Projeto <i class="icon ion-ios-arrow-right"></i></span>
-    </a>
-
-    <a href="#project4" class="project-item item-shadow popup-with-zoom-anim building">
-      <img alt="" class="img-responsive" src="images/projects/4-426x574.jpg">
-      <div class="project-hover">
-        <div class="project-hover-content">
-          <h3 class="project-title">Lago Azul<br>Condomínio<br>Sorocaba</h3>
-          <p class="project-description">A poucas horas de São Paulo, o Condomínio Lago Azul lança sua segunda fase. Com a ampliação do seu exclusivo campo de golfe e novas vistas incríveis.</p>
-        </div>
-      </div>
-      <span class="link-arrow">Em Breve <i class="icon ion-ios-arrow-right"></i></span>
-    </a>
-  </div>
-</section>
 
 <!-- Project Modal Dialog 1 -->
 <div id="project1" class="container zoom-anim-dialog mfp-hide">
@@ -741,9 +744,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="thumbnail-carousel d-flex align-items-center justify-content-center mt-4">
         <button class="carousel-arrow" onclick="slideThumbnails('left')">❮</button>
         <div class="thumbnail-container d-flex overflow-hidden">
-          <!-- Thumbnail Items -->
           <img onclick="changeImage('images/projects/1-960x540.jpg')" src="images/projects/1-960x540.jpg" class="img-thumbnail" alt="Thumbnail 1">
           <img onclick="changeImage('images/projects/2-960x540.jpg')" src="images/projects/2-960x540.jpg" class="img-thumbnail" alt="Thumbnail 2">
+          <img onclick="changeImage('images/projects/3-960x540.jpg')" src="images/projects/3-960x540.jpg" class="img-thumbnail" alt="Thumbnail 3">
+          <img onclick="changeImage('images/projects/4-960x540.jpg')" src="images/projects/4-960x540.jpg" class="img-thumbnail" alt="Thumbnail 4">
+          <img onclick="changeImage('images/projects/5-960x540.jpg')" src="images/projects/5-960x540.jpg" class="img-thumbnail" alt="Thumbnail 5">
+          <img onclick="changeImage('images/projects/6-960x540.jpg')" src="images/projects/6-960x540.jpg" class="img-thumbnail" alt="Thumbnail 6">
+          <img onclick="changeImage('images/projects/7-960x540.jpg')" src="images/projects/7-960x540.jpg" class="img-thumbnail" alt="Thumbnail 7">
+          <img onclick="changeImage('images/projects/8-960x540.jpg')" src="images/projects/8-960x540.jpg" class="img-thumbnail" alt="Thumbnail 8">
+          <img onclick="changeImage('images/projects/9-960x540.jpg')" src="images/projects/9-960x540.jpg" class="img-thumbnail" alt="Thumbnail 9">
+          <img onclick="changeImage('images/projects/10-960x540.jpg')" src="images/projects/10-960x540.jpg" class="img-thumbnail" alt="Thumbnail 10">
+          <img onclick="changeImage('images/projects/11-960x540.jpg')" src="images/projects/11-960x540.jpg" class="img-thumbnail" alt="Thumbnail 11">
+          <img onclick="changeImage('images/projects/12-960x540.jpg')" src="images/projects/12-960x540.jpg" class="img-thumbnail" alt="Thumbnail 12">
+          <img onclick="changeImage('images/projects/13-960x540.jpg')" src="images/projects/13-960x540.jpg" class="img-thumbnail" alt="Thumbnail 13">
+          <img onclick="changeImage('images/projects/14-960x540.jpg')" src="images/projects/14-960x540.jpg" class="img-thumbnail" alt="Thumbnail 14">
+          <img onclick="changeImage('images/projects/15-960x540.jpg')" src="images/projects/15-960x540.jpg" class="img-thumbnail" alt="Thumbnail 15">
+          <img onclick="changeImage('images/projects/16-960x540.jpg')" src="images/projects/16-960x540.jpg" class="img-thumbnail" alt="Thumbnail 16">
+          <img onclick="changeImage('images/projects/17-960x540.jpg')" src="images/projects/17-960x540.jpg" class="img-thumbnail" alt="Thumbnail 17">
+          <img onclick="changeImage('images/projects/18-960x540.jpg')" src="images/projects/18-960x540.jpg" class="img-thumbnail" alt="Thumbnail 18">
+          <img onclick="changeImage('images/projects/19-960x540.jpg')" src="images/projects/19-960x540.jpg" class="img-thumbnail" alt="Thumbnail 19">
+          <img onclick="changeImage('images/projects/20-960x540.jpg')" src="images/projects/20-960x540.jpg" class="img-thumbnail" alt="Thumbnail 20">
+          <img onclick="changeImage('images/projects/21-960x540.jpg')" src="images/projects/21-960x540.jpg" class="img-thumbnail" alt="Thumbnail 21">
+          <img onclick="changeImage('images/projects/22-960x540.jpg')" src="images/projects/22-960x540.jpg" class="img-thumbnail" alt="Thumbnail 22">
+          <img onclick="changeImage('images/projects/23-960x540.jpg')" src="images/projects/23-960x540.jpg" class="img-thumbnail" alt="Thumbnail 23">
+          <img onclick="changeImage('images/projects/24-960x540.jpg')" src="images/projects/24-960x540.jpg" class="img-thumbnail" alt="Thumbnail 24">
+          <img onclick="changeImage('images/projects/25-960x540.jpg')" src="images/projects/25-960x540.jpg" class="img-thumbnail" alt="Thumbnail 25">
+          <img onclick="changeImage('images/projects/26-960x540.jpg')" src="images/projects/26-960x540.jpg" class="img-thumbnail" alt="Thumbnail 26">
+          <img onclick="changeImage('images/projects/27-960x540.jpg')" src="images/projects/27-960x540.jpg" class="img-thumbnail" alt="Thumbnail 27">
+          <img onclick="changeImage('images/projects/28-960x540.jpg')" src="images/projects/28-960x540.jpg" class="img-thumbnail" alt="Thumbnail 28">
+          <img onclick="changeImage('images/projects/29-960x540.jpg')" src="images/projects/29-960x540.jpg" class="img-thumbnail" alt="Thumbnail 29">
+          <img onclick="changeImage('images/projects/30-960x540.jpg')" src="images/projects/30-960x540.jpg" class="img-thumbnail" alt="Thumbnail 30">
+          <img onclick="changeImage('images/projects/31-960x540.jpg')" src="images/projects/31-960x540.jpg" class="img-thumbnail" alt="Thumbnail 31">
+          <img onclick="changeImage('images/projects/32-960x540.jpg')" src="images/projects/32-960x540.jpg" class="img-thumbnail" alt="Thumbnail 32">  
         </div>
         <button class="carousel-arrow" onclick="slideThumbnails('right')">❯</button>
       </div>
@@ -770,26 +802,161 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </div>
 
-<!-- CSS Ajustado -->
+<!-- Inline CSS for Responsiveness and Styling -->
 <style>
-  .project-hover-content h3,
-  .project-hover-content p {
-    color: #fff;
+  .main-image-container {
+    position: relative;
+    width: 100%;
+    max-width: 960px;
+    margin: auto;
+  }
+
+  .main-image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .main-carousel-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    background: none;
+    border: none;
+    color: #333;
+    cursor: pointer;
+    padding: 0 10px;
+    z-index: 10;
+  }
+
+  .main-carousel-arrow.prev {
+    left: 10px;
+  }
+
+  .main-carousel-arrow.next {
+    right: 10px;
+  }
+
+  .main-carousel-arrow:hover {
+    color: #FFCE04;
+  }
+
+  .thumbnail-carousel {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 24px;
+  }
+
+  .thumbnail-container {
+    display: flex;
+    gap: 8px;
+    overflow-x: hidden;
+    width: 80%;
+  }
+
+  .thumbnail-container .img-thumbnail {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    transition: transform 0.3s, border-color 0.3s;
+  }
+
+  .thumbnail-container .img-thumbnail:hover {
+    transform: scale(1.1);
+  }
+
+  .thumbnail-container .img-thumbnail.selected {
+    border: 3px solid #FFCE04; /* Destaque do thumbnail selecionado */
   }
 
   .carousel-arrow {
-    cursor: pointer;
-    background: #000;
-    color: #fff;
+    font-size: 24px;
+    background: none;
     border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    color: #333;
+    cursor: pointer;
+    padding: 0 10px;
+  }
+
+  .carousel-arrow:hover {
+    color: #FFCE04;
   }
 </style>
+
+<!-- JavaScript ajustado para rolar o carrossel de thumbnails -->
+<script>
+  const mainImageElement = document.getElementById('mainImage');
+  const thumbnails = document.querySelectorAll('.thumbnail-container .img-thumbnail');
+  const thumbnailContainer = document.querySelector('.thumbnail-container');
+
+  // Array completo de todas as imagens principais
+  const mainImages = Array.from(thumbnails).map(thumbnail => thumbnail.src);
+  let mainImageIndex = 0;
+
+  // Função para alterar a imagem principal e rolar até o thumbnail correspondente
+  function changeMainImage(src, element) {
+    mainImageElement.src = src;
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    element.classList.add('selected');
+    mainImageIndex = mainImages.indexOf(src); // Atualiza o índice principal
+    scrollToThumbnail(element); // Rola para o thumbnail ativo
+  }
+
+  // Funções para setas de navegação da imagem principal
+  function prevMainImage() {
+    mainImageIndex = (mainImageIndex - 1 + mainImages.length) % mainImages.length;
+    mainImageElement.src = mainImages[mainImageIndex];
+    const selectedThumbnail = thumbnails[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+    scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
+  }
+
+  function nextMainImage() {
+    mainImageIndex = (mainImageIndex + 1) % mainImages.length;
+    mainImageElement.src = mainImages[mainImageIndex];
+    const selectedThumbnail = thumbnails[mainImageIndex];
+    highlightThumbnail(mainImages[mainImageIndex]);
+    scrollToThumbnail(selectedThumbnail); // Rola para o thumbnail ativo
+  }
+
+  // Destaque do thumbnail correspondente à imagem principal
+  function highlightThumbnail(src) {
+    thumbnails.forEach(thumb => thumb.classList.remove('selected'));
+    const thumbnail = Array.from(thumbnails).find(thumb => thumb.src === src);
+    if (thumbnail) thumbnail.classList.add('selected');
+  }
+
+  // Função para deslizar os thumbnails horizontalmente
+  function slideThumbnails(direction) {
+    const scrollAmount = 120; // Controla o movimento de scroll
+    thumbnailContainer.scrollBy({
+      left: direction === 'left' ? -scrollAmount : scrollAmount,
+      behavior: 'smooth'
+    });
+  }
+
+  // Função para centralizar o thumbnail ativo na visualização do carrossel
+  function scrollToThumbnail(element) {
+    const thumbnailContainerRect = thumbnailContainer.getBoundingClientRect();
+    const elementRect = element.getBoundingClientRect();
+    const offset = elementRect.left - thumbnailContainerRect.left - (thumbnailContainerRect.width / 2) + (elementRect.width / 2);
+    thumbnailContainer.scrollBy({
+      left: offset,
+      behavior: 'smooth'
+    });
+  }
+
+  // Adiciona evento de clique em cada thumbnail para atualização da imagem principal
+  thumbnails.forEach(thumb => {
+    thumb.addEventListener('click', () => changeMainImage(thumb.src, thumb));
+  });
+</script>
+
+
 
 
         <!-- Project Modal Dialog 2 -->
